--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,10 @@
 
   <title></title>
 </head>
-<body>
+<header>
+  <%= erb :_header %>
+</header>
+<body class="court-background">
   <%= yield %>
 </body>
 </html>
