--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,4 +1,15 @@
 body {
+	font-family: serif;
+	color: white;
+}
+
+header {
+	/*background-color: white;*/
+	padding: 20px;
+	font-size: 3em;
+}
+
+.court-background {
 	background: black url("/images/court-background.jpg") no-repeat center center fixed;
 	background-size: 100%, 100%;
 }
@@ -8,23 +19,38 @@ body {
 	padding: 10px;
 }
 
-.justices-container {
-	width: 800px;
-	height: 200px;
+.center-screen {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+.flex-centered {
 	margin: auto;
-	border-width: 2px;
-	border-style: solid;
-	border-color: green;
-	padding: 5px;
+	width: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border-width: 2px;
+	border-style: solid;
+	border-color: green;
+}
+
+
+
+.justices-container {
+	/*width: 800px;*/
+	height: 200px;
+	padding: 5px;
+
 }
 
 .justice-image {
 	box-shadow: 2px 2px 5px black;
 	height: auto;
-	width: 75px;
+	width: 100px;
 	margin: 2px;
 	border-width: 1px;
 	border-style: solid;
