--- a/public/css/application.css
+++ b/public/css/application.css
@@ -58,3 +58,8 @@ header {
 	/*display: inline-block;*/
 	/*vertical-align: middle;*/
 }
+
+.justice-name {
+	text-align: center;
+	display: none;
+}
