Add CourtListener class

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="justices-container flex-centered">
 		<div>
-			<img class="justice-image" src="/images/Blank.jpg">
+			<img class="justice-image" src="/images/Constitution.jpg">
 			<div class="justice-name">Issues</div>
 		</div>
 		<div>
