--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -20,7 +20,7 @@
 <header>
   <%= erb :_header %>
 </header>
-<body class="court-background">
+<body >
   <%= yield %>
 </body>
 </html>
