Pre-authorization commit

--- a/app/views/cases.erb
+++ b/app/views/cases.erb
@@ -8,5 +8,5 @@
     <% end %>
   </ul>
 </div>
-<%= pp @court_listener.opinion_text_by_url( "https://www.courtlistener.com/api/rest/v3/opinions/247162/" ) %>
+<%= @court_listener.person_by_name('David', 'Souter') %>
 
