Add new case form

--- a/app/views/cases/index.erb
+++ b/app/views/cases/index.erb
@@ -7,6 +7,9 @@
       <li><%=cur_case.full_citation%></li>
     <% end %>
   </ul>
+
 </div>
-<%= @court_listener.person_by_name('David', 'Souter') %>
+<div class="white-background flex-centered">
+  <a href="/cases/new">Add a new case</a>
+</div>
 
