--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,12 +4,16 @@
 </div>
 <div class="justices-container flex-centered">
 		<div>
-			<img class="justice-image" src="/images/Constitution.jpg">
-			<div class="justice-name">Issues</div>
+			<a href="/issues">
+				<img class="justice-image" src="/images/Constitution.jpg">
+				<div class="justice-name">Issues</div>
+			</a>
 		</div>
 		<div>
-			<img class="justice-image" src="/images/law-book.jpg">
-			<div class="justice-name">Cases</div>
+			<a href="/cases">
+				<img class="justice-image" src="/images/law-book.jpg">
+				<div class="justice-name">Cases</div>
+			</a>
 		</div>
 		<div>
 			<a href="/justices">
