--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,9 @@
 <header>
   <%= erb :_header %>
 </header>
-<body >
-  <%= yield %>
+<body class="court-background">
+  <div class="white-background">
+    <%= yield %>
+  </div>
 </body>
 </html>
