--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -1,5 +1,15 @@
-<div class="flex-centered" >
-	
+<div class="white-background" >
+
 Supreme Court
+
+
+
+  <form class="login-form" action>
+    <button type="submit">Login</button>
+  </form>
+  <form class="login-form">
+    <button type="submit">Register</button>
+  </form>
+
 
 </div>
