--- a/public/css/application.css
+++ b/public/css/application.css
@@ -5,7 +5,6 @@ body {
 header {
 	/*background-color: white;*/
 	padding: 20px;
-	font-size: 3em;
 }
 
 .court-background {
@@ -40,8 +39,12 @@ header {
 }
 
 .white-background {
+	margin: auto;
+	width: 50%;
+	height: 100%;
 	background-color: white;
 	color: black;
+	padding: 1em;
 }
 
 .justices-container {
@@ -66,4 +69,9 @@ header {
 .justice-name {
 	text-align: center;
 	display: none;
+}
+
+.login-form {
+	display: inline-block;
+	float: right;
 }
