--- a/app/views/cases/index.erb
+++ b/app/views/cases/index.erb
@@ -10,6 +10,10 @@
 
 </div>
 <div class="white-background flex-centered">
-  <a href="/cases/new">Add a new case</a>
+  <a id="new-case-link" href="/cases/new">Add a new case</a>
 </div>
+
+<!-- <p>
+  <%= @court_listener.citing_opinions(Case.first.cite1) %>
+</p> -->
 
