--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 <div class="flex-centered">
 	<h1>Placeholder</h1>
 </div>
-<div class="justices-container flex-centered">
+<div class="flex-centered">
 		<div>
 			<a href="/issues">
 				<img class="justice-image" src="/images/Constitution.jpg">
