--- a/app/views/issues/index.erb
+++ b/app/views/issues/index.erb
@@ -8,3 +8,9 @@
     <% end %>
   </ul>
 </div>
+<div class="white-background flex-centered">
+  <a id="new-issue-link" href="/issues/new">Add a new issue</a>
+</div>
+<div id="issue-form-holder">
+
+</div>
