Fix bugs with token authentication

--- a/app/views/cases/show.erb
+++ b/app/views/cases/show.erb
@@ -6,6 +6,7 @@
 </div>
 <div class="inline-box">
   <h2>Recent citations</h2>
-  <% @case.recent_citations %>
+  <% c = @case.recent_citations %>
+  <%= c.full_citation %>
 
 </div>
