--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,7 @@
 
 <div class="flex-centered">
 	<h1>Placeholder</h1>
+	<p><%=ENV['SECRET_TOKEN']%></p>
 </div>
 <div class="flex-centered">
 		<div>
