--- a/app/views/issues/show.erb
+++ b/app/views/issues/show.erb
@@ -3,12 +3,23 @@
 </div>
 <div class="inline-box">
   <h2>Supreme Court cases</h2>
-  <ul>
-    <% @issue.cases.each do |cur_case| %>
-      <a href="/cases/<%=cur_case.id%>"><%=cur_case.full_citation%></a>
-    <% end %>
-  </ul>
 </div>
 <div class="inline-box">
   <h2>Recent citations</h2>
 </div>
+
+  <% @issue.cases.each do |cur_case| %>
+    <div>
+      <div class="inline-box">
+        <a href="/cases/<%=cur_case.id%>"><%=cur_case.full_citation%></a>
+      </div>
+      <ul class="inline-box">
+         <% cur_case.recent_citations.each do |citation| %>
+          <li><a href="/issues/<%=@issue.id%>/citations/<%=citation.id%>"><%=citation.full_citation%></a></li>
+          <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+<div>
+
