Add styling for menu

--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -1,8 +1,11 @@
 <div class="white-background" >
-  <a href="/">Index</a>
+  <div class="flex-centered inline-block">
+    <h1>RightsWatch</h1>
+  </div>
   <div class="login-form">
   <% if session[:id] %>
-    Welcome <%= current_user.user_name %> |
+    <a href="/">Index</a> |
+    <%= current_user.user_name %> |
     <form class="login-form" id="logout-form" action="/sessions" method="post">
       <input type="hidden" name="_method" value="DELETE">
       <button type="submit">Logout</button>
