--- a/app/views/cases/show.erb
+++ b/app/views/cases/show.erb
@@ -1,15 +1,12 @@
-<div class="flex-centered">
-    <h1><%= @case.name %></h1>
+<div class="opinion-container">
+  <div class="flex-centered">
+      <h1><%= @case.name %></h1>
+  </div>
+  <div class="flex-centered">
+      <p><%= @case.full_citation %></p>
+  </div>
+  <div>
+    <%= @case.full_text %>
+  </div>
 </div>
-<div class="flex-centered">
-    <p><%= @case.full_citation %></p>
-</div>
-<div>
-  <%= @case.full_text %>
-</div>
-<!-- <div>
-  <h2>Recent citations</h2>
-  <% c = @case.recent_citations %>
-  <h3><%= c.full_citation %></h3>
-  <p><%= c.formatted_text %></p>
-</div> -->
+
