--- a/app/views/citations/show.erb
+++ b/app/views/citations/show.erb
@@ -2,7 +2,7 @@
   <h1><%=@issue.name%></h1>
 </div>
 <div class="opinion-container">
-  <h3><%= @citation.full_citation %></h3>
+  <h3 class="flex-centered"><%= @citation.full_citation %></h3>
   <p><%= @citation.formatted_text %></p>
 </div>
 
