--- a/app/views/issues/_form.erb
+++ b/app/views/issues/_form.erb
@@ -1,5 +1,7 @@
 <form id="issue-form" action='/issues' method='post' class="white-background">
   <label>Enter short name for new issue:</label>
-  <input type="text" name="name">
-  <button type="submit">Submit</button>
+  <div>
+    <input type="text" name="name">
+    <input class="small-button" type="submit" value="Submit">
+  </div>
 </form>
