--- a/app/views/issues/index.erb
+++ b/app/views/issues/index.erb
@@ -1,21 +1,20 @@
 <div class="flex-centered">
   <h1>Issues</h1>
 </div>
-<div class="white-background flex-centered">
-  <ul class="unmarked-list">
+<div class="flex-centered">
+  <ul class="button-list">
     <% Issue.all.each do |cur_issue| %>
-      <li>
+      <li class="inline-block">
         <%= erb :'/issues/_follow', layout: false, locals: { user: current_user, issue: cur_issue } %>
-        <a href="/issues/<%= cur_issue.id %>"><%=cur_issue.name%></a>
+      </li>
+    <% end %>
+    <% if current_user %>
+      <li class="inline-block">
+        <form class="flex" action="/issues/new">
+          <button class="big-button yellow" type="submit">+ Add New Issue</button>
+        </form>
       </li>
     <% end %>
   </ul>
 </div>
-<div class="white-background flex-centered">
-  <% if current_user %>
-    <a id="new-issue-link" href="/issues/new">Add a new issue</a>
-  <% end %>
-</div>
-<div id="issue-form-holder">
 
-</div>
