Minor styling changes

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -39,7 +39,7 @@ header {
 
 .white-background {
 	margin: auto;
-	width: 50%;
+	width: 1200px;
 	background-color: white;
 	color: black;
 	padding: 1em;
