--- a/app/views/cases/index.erb
+++ b/app/views/cases/index.erb
@@ -9,7 +9,7 @@
   </ul>
 
 </div>
-<div class="white-background flex-centered">
+<div class="flex-centered">
   <a id="new-case-link" href="/cases/new">Add a new case</a>
 </div>
 
