--- a/app/views/issues/_form.erb
+++ b/app/views/issues/_form.erb
@@ -1,4 +1,4 @@
-<form id="issue-form" action='/issues' method='post' class="white-background">
+<form id="issue-form" action='/issues' method='post' class="flex-centered">
   <label>Enter short name for new issue:</label>
   <div>
     <input type="text" name="name">
