--- a/app/views/issues/show.erb
+++ b/app/views/issues/show.erb
@@ -7,26 +7,18 @@
   <ul class="unmarked-list">
 
     <% @issue.cases.each do |cur_case| %>
-      <li>
-
-        <form class="inline" action="/cases/<%=cur_case.id%>" method="get">
-          <button class="big-button light-blue" type="submit"><%=cur_case.name%>
-          </button>
-        </form>
-        <form class="inline" action="/issues/<%=@issue.id%>/cases/<%=cur_case.id%>" method="post">
-          <button class="tall-button light-blue" type="submit">&rarr;
-          </button>
-        </form>
-      </li>
+      <%= erb :"cases/_button", layout: false, locals: { cur_case: cur_case } %>
     <% end %>
     <% if current_user %>
       <li>
-        <form action="/cases/new" method="get">
+        <form id="new-case-link" action="/issues/<%=@issue.id%>/cases/new" method="get">
           <button class="big-button yellow" type="submit">+ Add New Case
           </button>
         </form>
       </li>
     <% end %>
+    <div id="case-form-holder">
+    </div>
   <ul>
 </div>
 <div class="inline-box">
