Ajaxify case citations and add spinner

--- a/app/views/cases/_button.erb
+++ b/app/views/cases/_button.erb
@@ -4,7 +4,7 @@
           <button class="big-button light-blue" type="submit"><%=cur_case.name%>
           </button>
         </form>
-        <form class="inline" action="/issues/<%=@issue.id%>/cases/<%=cur_case.id%>" method="post">
+        <form class="citations inline" action="/issues/<%=@issue.id%>/cases/<%=cur_case.id%>" method="post">
           <button class="tall-button light-blue" type="submit">&rarr;
           </button>
         </form>
