--- a/app/views/issues/index.erb
+++ b/app/views/issues/index.erb
@@ -1,6 +1,9 @@
 <div class="flex-centered">
   <h1>Issues</h1>
 </div>
+<div class="loader">
+  Loading...
+</div>
 <div class="flex-centered">
   <ul class="button-list" id="issue-button-list">
     <% Issue.all.each do |cur_issue| %>
