--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,7 @@
 <div class="flex-centered">
 </div>
 <div class="flex-centered">
+		<div class="loader">Loading...<div>
 		<div>
 			<a href="/issues">
 				<img class="justice-image" src="/images/Constitution.jpg">
