--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans'>
   <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="/css/animation.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
